<resources>
    <string name="app_name">Sky Q Remote</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">About</string>
    <!-- Strings used for fragments for navigation -->
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">IP Address:</string>
    <string name="hello_second_fragment">Hello second fragment</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="title_activity_info" translatable="false">InfoActivity</string>

    <!-- Preference Titles -->
    <string name="settings_title">Settings</string>
    <string name="settings_header">SkyQ Settings</string>
    <string name="auto_discover">Auto discover devices</string>
    <string name="auto_discover_summary">Click here to attempt an automatic discovery</string>
    <string name="sky_q_legacy">Sky Q Legacy</string>
    <string name="sky_q_legacy_summary">Enable this option if the app does not work with your Sky Q (its firmware version may be lower than 060)</string>
    <string name="timeout">Timeout</string>
    <string name="timeout_summary">Change the default connection timeout duration in milliseconds (1000ms = 1s)</string>

    <!-- Messages Preferences -->
    <string name="settings_ip">IP Address</string>

    <string name="title_activity_help">Help</string>

    <string name="discover_text">Discovery result</string>
    <string name="btn_discover">Run Auto discovery</string>
    <string name="devices_found">Devices Found</string>
    <string name="help_text_content1">"This app turns your smartphone into a Sky Q (and Sky Q mini) remote. "</string>
    <string name="help_text_content2">"For this app to work your smartphone and your Sky Q box(es) need to be connected to the same network. "</string>
    <string name="help_text_content3">"You can then go into <b>Settings</b> and enter your Sky Q <b>IP Address</b> that can be found on your Sky Q from <b>Settings > Status > Network Connection > Network Setup > Advanced Settings. </b>  "</string>
    <string name="help_text_content4">"Or you can attempt an auto discovery from <b>Settings > Auto discover devices > Run auto discovery</b> and select one (if any) of the found devices. "</string>
    <string name="help_text_content5">If you followed all the above instructions and the app still does not work then you can try enabling the <b>Sky Q Legacy</b> option in the settings and repeating the discovery process. If this still does not work then contact me at <a href="mailto:michielan8@gmail.com">michielan8@gmail.com</a></string>
    <string name="discovery_screenshot">Screenshot showing result of discovery</string>
    <string name="skyq_screenshot">Screenshot showing settings from Sky Q</string>
    <string name="screenshot_of_the_settings">Screenshot of the settings</string>

    <!-- About -->
    <string name="info_title">About</string>
    <string name="about_text1">This app is free and fully open source, developed by Andrea Michielan, its code is freely available on Github at <a href="https://github.com/andrea-michielan/SkyQRemote">https://github.com/andrea-michielan/SkyQRemote</a> under the MIT License <a href="https://github.com/andrea-michielan/SkyQRemote/blob/master/LICENSE">https://github.com/andrea-michielan/SkyQRemote/blob/master/LICENSE</a></string>
    <string name="about_text2"><b>Sky Group Limited</b> is in no way associated with this app nor with the developer of this app.</string>
    <string name="about_text3">You can contact me at <a href="mailto:michielan8@gmail.com">michielan8@gmail.com</a> for any questions.</string>
    <string name="about_text4">Version %1$s</string>

    <string name="discover_toast">Found %1$d devices!</string>

    <string name="help_toast">Need help?</string>
    <string name="help_toast_action">See help page</string>
    <string name="sky_q_remote_image">Sky Q remote image</string>
    <string name="first_time_dialog_message">Hi, it seems that this is the first time that you\'ve launched the app, or you haven\'t set it up properly yet. In order to do so you need to go to the settings and enter the Sky Q IP address, manually or by starting an automatic discovery. You can click on the <b>Settings</b> button below if you want me to bring you to the settings page.</string>
    <string name="first_time_dialog_title">First configuration</string>
    <string name="first_time_dialog_positive">Settings</string>
    <string name="first_time_dialog_negative">Cancel</string>
    <string name="wrong_configuration_message">The app was not able to communicate with the Sky Q; it seems that the configuration is incorrect. Make sure that the IP address is correct, that your smartphone and your Sky Q are connected to the same network and that you have checked/unchecked the Sky Q Legacy option based on your Sky Q firmware version. Click the <b>Settings</b> button below if you want me to bring you to the settings page.</string>
    <string name="wrong_configuration_title">Wrong configuration</string>
</resources>