<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#000000"
    android:theme="@style/PreferenceScreen">

    <PreferenceCategory app:title="@string/settings_header">

        <EditTextPreference
            android:id="@+id/ip_address"
            android:theme="@style/AppTheme"
            app:key="ip"
            app:title="@string/settings_ip"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:id="@+id/auto_discover"
            android:key="discover"
            android:summary="@string/auto_discover_summary"
            android:title="@string/auto_discover" />
        <SwitchPreference
            android:id="@+id/sky_q_legacy"
            android:defaultValue="false"
            android:key="port"
            android:summary="@string/sky_q_legacy_summary"
            android:title="@string/sky_q_legacy" />
        <SeekBarPreference
            android:id="@+id/timeout"
            android:key="timeout"
            android:max="5000"
            android:summary="@string/timeout_summary"
            android:title="@string/timeout"
            app:defaultValue="1000"
            app:min="500"
            app:showSeekBarValue="true" />

    </PreferenceCategory>

</PreferenceScreen>