<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/help_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:text="@string/help_text_content1"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/help_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:text="@string/help_text_content2"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/help_text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:text="@string/help_text_content3"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/skyq_screenshot"
                android:padding="14dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/sky_ip_settings" />

            <TextView
                android:id="@+id/help_text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:text="@string/help_text_content4"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/screenshot_of_the_settings"
                android:padding="14dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/settings_discovery" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/discovery_screenshot"
                android:padding="14dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/discovery" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>